{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "de43ca36-e2cd-4353-adc4-cfdfc8a92147",
            "actions": [
                {
                    "name": "FireAction",
                    "type": "Button",
                    "id": "ec20e427-03da-46bd-ad88-661d5c69f632",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SkillAction",
                    "type": "Button",
                    "id": "8fd1c5db-a516-4a29-8168-2dfa7fc7705f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "aa60f257-41b9-4395-9936-0b2f2f0f3928",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePos",
                    "type": "Value",
                    "id": "84c74cb1-73d5-4238-a3c5-ec2fb6404ef6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af8acf16-1664-4f60-af13-fbc605ec1e4a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FireAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "31743faa-f932-47d1-8ab0-4fb5d437f98b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillAction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "c94d57a3-675a-4e86-a90c-ed0da0977c09",
                    "path": "1DAxis",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "89596dc3-dce4-4e21-94dd-bbaf072fc604",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "ca8383a4-13c5-478e-87dd-bb95c680d7a1",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "fa7d9de7-c891-4967-9ff7-890b449019bb",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}